# klippain-shaketune

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: README.md
docs/macros/: axes_shaper_calibrations.md  compare_belts_responses.md  create_vibrations_profile.md  excitate_axis_at_freq.md  tension_belt.md
shaketune/: dummy_macros.cfg  shaketune.py  shaketune_config.py
shaketune/commands/: __init__.py  create_vibrations_profile.py  excitate_axis_at_freq.py  tension_belt.py
shaketune/graph_creators/: computation_results.py
shaketune/graph_creators/computations/: belts_computation.py
shaketune/graph_creators/plotters/: belts_plotter.py
shaketune/helpers/: resonance_test.py  strobe_controller.py
