[build-system]
requires = ["hatchling>=1.27.0", "hatch-vcs>=0.4.0"]
build-backend = "hatchling.build"

[project]
name = "shake_n_tune"
description = "Klipper streamlined input shaper workflow and calibration tools"
readme = "README.md"
requires-python = ">= 3.9"
authors = [
  {name = "Félix Boisselier", email = "felix@fboisselier.fr"}
]
keywords = ["klipper", "input shaper", "calibration", "3d printer"]
license = {file = "LICENSE"}
dependencies = [
  "GitPython==3.1.41",
  "matplotlib==3.9.4",
  "numpy==2.0.2 ; python_full_version < '3.10'",
  "numpy==2.2.2 ; python_full_version >= '3.10'",
  "zstandard==0.23.0",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/Frix-x/klippain-shaketune"
Documentation = "https://github.com/Frix-x/klippain-shaketune/tree/main/docs"
Issues = "https://github.com/Frix-x/klippain-shaketune/issues"
Changelog = "https://github.com/Frix-x/klippain-shaketune/releases"

[dependency-groups]
dev = [
  "ruff>=0.11.0",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["shaketune"]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 120 # We all have modern screens now and I believe this should be brought in line with current technology
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]
unfixable = ["B"]

[tool.ruff.format]
quote-style = "single"
skip-magic-trailing-comma = false
